--- a/Project.ipynb
+++ b/Project.ipynb
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "0cd8e896",
    "metadata": {},
    "outputs": [],
@@ -373,8 +373,10 @@
     "            pass\n",
     "    \n",
     "    # Find the right day\n",
+    "    d = 0\n",
     "    date_elements = driver.find_elements(By.CSS_SELECTOR, 'time.menu_date_title')\n",
-    "    scraped_day = ' '.join(date_elements[0].text.split()[2:5])\n",
+    "    scraped_day = ' '.join(date_elements[d].text.split()[2:5])\n",
+    "    print(scraped_day)\n",
     "    # Move until the right day\n",
     "    while scraped_day == day:\n",
     "        try:\n",
@@ -382,7 +384,9 @@
     "            next_button.click()\n",
     "        except Exception as e:\n",
     "            pass\n",
-    "    \n",
+    "        d += 1\n",
+    "        scraped_day = ' '.join(date_elements[d].text.split()[2:5])\n",
+    "        \n",
     "    # Scrape meal\n",
     "    meal_div = driver.find_elements(By.CSS_SELECTOR, 'div.meal')\n",
     "    meals = []\n",
@@ -412,10 +416,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "1e1aaff7",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jeudi 17 octobre\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -445,7 +456,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Wednesday 16 October</td>\n",
+       "      <td>vendredi 18 October</td>\n",
        "      <td>Déjeuner Petit-déjeuner Café &amp; Viennoiseries 7...</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
@@ -454,21 +465,22 @@
        "</div>"
       ],
       "text/plain": [
-       "                    day                                              lunch  \\\n",
-       "0  Wednesday 16 October  Déjeuner Petit-déjeuner Café & Viennoiseries 7...   \n",
+       "                   day                                              lunch  \\\n",
+       "0  vendredi 18 October  Déjeuner Petit-déjeuner Café & Viennoiseries 7...   \n",
        "\n",
        "  dinner  \n",
        "0         "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "link = \"https://www.crous-strasbourg.fr/restaurant/cafeteria-le-pege-2/\"\n",
-    "day = get_today_date()\n",
+    "#day = get_today_date()\n",
+    "day = 'vendredi 18 October'\n",
     "\n",
     "menuDB = ScrapeMenu(link, day)\n",
     "menuDB"
@@ -476,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "8a08e723",
    "metadata": {},
    "outputs": [],
@@ -484,6 +496,27 @@
     "conn = sqlite3.connect('menu.db')\n",
     "menuDB.to_sql('my_table', conn, if_exists='replace', index=False)\n",
     "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "049aa9d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Déjeuner Petit-déjeuner Café & Viennoiseries 7h30 -10h30 Plat du jour Rougail saucisse Riz aux épices Végétarien Rougail végétarien Riz aux épices Origine de nos viandes du jour FRANCE'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "menuDB['lunch'][0]"
    ]
   }
  ],
