--- a/Project.ipynb
+++ b/Project.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d921a327",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "00ec8ebe",
    "metadata": {},
    "outputs": [],
@@ -121,201 +121,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "3d4299f4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>link</th>\n",
-       "      <th>hours</th>\n",
-       "      <th>address</th>\n",
-       "      <th>payment</th>\n",
-       "      <th>services</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>cafeteria le pege</td>\n",
-       "      <td>https://www.crous-strasbourg.fr/restaurant/caf...</td>\n",
-       "      <td>07h30 à 14h30</td>\n",
-       "      <td>61 avenue de la Forêt Noire - 67000 Strasbourg</td>\n",
-       "      <td>Carte bancaire, IZLY</td>\n",
-       "      <td>Accès handicapé, Accès wifi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>resto u gallia</td>\n",
-       "      <td>https://www.crous-strasbourg.fr/restaurant/res...</td>\n",
-       "      <td>Ouvert du lundi au vendredi  &gt; Self et Brasser...</td>\n",
-       "      <td>1 place de l'Université 67000 Strasbourg</td>\n",
-       "      <td>Carte bancaire, IZLY</td>\n",
-       "      <td>Accès handicapé, Accès wifi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>resto u esplanade</td>\n",
-       "      <td>https://www.crous-strasbourg.fr/restaurant/res...</td>\n",
-       "      <td>Ouvert du lundi au vendredi  &gt; Self : 11h30 à ...</td>\n",
-       "      <td>32 Boulevard de la Victoire 67000 Strasbourg</td>\n",
-       "      <td>IZLY</td>\n",
-       "      <td>Accès handicapé, Accès wifi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>resto u paul appell</td>\n",
-       "      <td>https://www.crous-strasbourg.fr/restaurant/res...</td>\n",
-       "      <td>LE SELF vous accueille du lundi au vendredi de...</td>\n",
-       "      <td>23 rue du Jura 67000 Strasbourg</td>\n",
-       "      <td>IZLY</td>\n",
-       "      <td>Accès handicapé, Accès wifi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>le 32</td>\n",
-       "      <td>https://www.crous-strasbourg.fr/restaurant/le-...</td>\n",
-       "      <td>11h30 à 13h30</td>\n",
-       "      <td>32 boulevard de la Victoire 67000 Strasbourg</td>\n",
-       "      <td>Carte bancaire, IZLY</td>\n",
-       "      <td>Accès handicapé, Accès wifi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>lannexe</td>\n",
-       "      <td>https://www.crous-strasbourg.fr/restaurant/lan...</td>\n",
-       "      <td>Du lundi au vendredi, de 11h30 à 13h45.</td>\n",
-       "      <td>23 rue du Jura 67000 Strasbourg</td>\n",
-       "      <td>IZLY</td>\n",
-       "      <td>Accès handicapé, Accès wifi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>resto u illkirch</td>\n",
-       "      <td>https://www.crous-strasbourg.fr/restaurant/res...</td>\n",
-       "      <td>Du lundi au vendredi :  LE SELF est ouvert de ...</td>\n",
-       "      <td>76 Route du Rhin 67400 Illkirch-Graffenstaden</td>\n",
-       "      <td>IZLY</td>\n",
-       "      <td>Accès handicapé, Accès wifi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>cafeteria mini r</td>\n",
-       "      <td>https://www.crous-strasbourg.fr/restaurant/caf...</td>\n",
-       "      <td>De 11h30 à 13h45.</td>\n",
-       "      <td>23 rue du Loess 67200 Strasbourg</td>\n",
-       "      <td>IZLY</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>resto u cronenbourg</td>\n",
-       "      <td>https://www.crous-strasbourg.fr/restaurant/res...</td>\n",
-       "      <td>Du lundi au vendredi :  LE SELF est ouvert de ...</td>\n",
-       "      <td>23 rue du Loess 67200 Strasbourg</td>\n",
-       "      <td>Carte bancaire, IZLY</td>\n",
-       "      <td>Accès handicapé, Accès wifi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>le cristal shop ru esplanade</td>\n",
-       "      <td>https://www.crous-strasbourg.fr/restaurant/le-...</td>\n",
-       "      <td>&gt; 7h30 à 14h15  Vente à emporter et à consomme...</td>\n",
-       "      <td>32 boulevard de la Victoire 67000 Strasbourg</td>\n",
-       "      <td>Carte bancaire, IZLY</td>\n",
-       "      <td>Accès wifi</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                           name  \\\n",
-       "0             cafeteria le pege   \n",
-       "1                resto u gallia   \n",
-       "2             resto u esplanade   \n",
-       "3           resto u paul appell   \n",
-       "4                         le 32   \n",
-       "5                       lannexe   \n",
-       "6              resto u illkirch   \n",
-       "7              cafeteria mini r   \n",
-       "8           resto u cronenbourg   \n",
-       "9  le cristal shop ru esplanade   \n",
-       "\n",
-       "                                                link  \\\n",
-       "0  https://www.crous-strasbourg.fr/restaurant/caf...   \n",
-       "1  https://www.crous-strasbourg.fr/restaurant/res...   \n",
-       "2  https://www.crous-strasbourg.fr/restaurant/res...   \n",
-       "3  https://www.crous-strasbourg.fr/restaurant/res...   \n",
-       "4  https://www.crous-strasbourg.fr/restaurant/le-...   \n",
-       "5  https://www.crous-strasbourg.fr/restaurant/lan...   \n",
-       "6  https://www.crous-strasbourg.fr/restaurant/res...   \n",
-       "7  https://www.crous-strasbourg.fr/restaurant/caf...   \n",
-       "8  https://www.crous-strasbourg.fr/restaurant/res...   \n",
-       "9  https://www.crous-strasbourg.fr/restaurant/le-...   \n",
-       "\n",
-       "                                               hours  \\\n",
-       "0                                      07h30 à 14h30   \n",
-       "1  Ouvert du lundi au vendredi  > Self et Brasser...   \n",
-       "2  Ouvert du lundi au vendredi  > Self : 11h30 à ...   \n",
-       "3  LE SELF vous accueille du lundi au vendredi de...   \n",
-       "4                                      11h30 à 13h30   \n",
-       "5            Du lundi au vendredi, de 11h30 à 13h45.   \n",
-       "6  Du lundi au vendredi :  LE SELF est ouvert de ...   \n",
-       "7                                  De 11h30 à 13h45.   \n",
-       "8  Du lundi au vendredi :  LE SELF est ouvert de ...   \n",
-       "9  > 7h30 à 14h15  Vente à emporter et à consomme...   \n",
-       "\n",
-       "                                          address               payment  \\\n",
-       "0  61 avenue de la Forêt Noire - 67000 Strasbourg  Carte bancaire, IZLY   \n",
-       "1        1 place de l'Université 67000 Strasbourg  Carte bancaire, IZLY   \n",
-       "2    32 Boulevard de la Victoire 67000 Strasbourg                  IZLY   \n",
-       "3                 23 rue du Jura 67000 Strasbourg                  IZLY   \n",
-       "4    32 boulevard de la Victoire 67000 Strasbourg  Carte bancaire, IZLY   \n",
-       "5                 23 rue du Jura 67000 Strasbourg                  IZLY   \n",
-       "6   76 Route du Rhin 67400 Illkirch-Graffenstaden                  IZLY   \n",
-       "7                23 rue du Loess 67200 Strasbourg                  IZLY   \n",
-       "8                23 rue du Loess 67200 Strasbourg  Carte bancaire, IZLY   \n",
-       "9    32 boulevard de la Victoire 67000 Strasbourg  Carte bancaire, IZLY   \n",
-       "\n",
-       "                      services  \n",
-       "0  Accès handicapé, Accès wifi  \n",
-       "1  Accès handicapé, Accès wifi  \n",
-       "2  Accès handicapé, Accès wifi  \n",
-       "3  Accès handicapé, Accès wifi  \n",
-       "4  Accès handicapé, Accès wifi  \n",
-       "5  Accès handicapé, Accès wifi  \n",
-       "6  Accès handicapé, Accès wifi  \n",
-       "7                               \n",
-       "8  Accès handicapé, Accès wifi  \n",
-       "9                   Accès wifi  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "infoDB = ScrapeInfo()\n",
     "infoDB"
@@ -323,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "baddb84e",
    "metadata": {},
    "outputs": [],
@@ -343,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "0cd8e896",
    "metadata": {},
    "outputs": [],
@@ -378,12 +187,17 @@
     "    scraped_day = ' '.join(date_elements[d].text.split()[2:5])\n",
     "    print(scraped_day)\n",
     "    # Move until the right day\n",
-    "    while scraped_day == day:\n",
+    "    while scraped_day != day:\n",
+    "        driver.execute_script(\"window.scrollBy(0, 300);\")\n",
+    "        \n",
     "        try:\n",
-    "            next_button = driver.find_element(By.XPATH, f\"/html/body/article/div/section[1]/div/div/div[{j+1}]/div[1]/div[2]\")\n",
+    "            next_button = driver.find_element(By.XPATH, f\"/html/body/article/div/section[1]/div/div/div[{d+1}]/div[1]/div[2]\")\n",
     "            next_button.click()\n",
     "        except Exception as e:\n",
     "            pass\n",
+    "        \n",
+    "        # !! problem with button to get nest days, click it but not complete go to the next day !!\n",
+    "        \n",
     "        d += 1\n",
     "        scraped_day = ' '.join(date_elements[d].text.split()[2:5])\n",
     "        \n",
@@ -416,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "1e1aaff7",
    "metadata": {},
    "outputs": [
@@ -428,59 +242,22 @@
      ]
     },
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>day</th>\n",
-       "      <th>lunch</th>\n",
-       "      <th>dinner</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>vendredi 18 October</td>\n",
-       "      <td>Déjeuner Petit-déjeuner Café &amp; Viennoiseries 7...</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   day                                              lunch  \\\n",
-       "0  vendredi 18 October  Déjeuner Petit-déjeuner Café & Viennoiseries 7...   \n",
-       "\n",
-       "  dinner  \n",
-       "0         "
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [5]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m#day = get_today_date()\u001b[39;00m\n\u001b[0;32m      3\u001b[0m day \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvendredi 18 octobre\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m----> 5\u001b[0m menuDB \u001b[38;5;241m=\u001b[39m \u001b[43mScrapeMenu\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlink\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mday\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m menuDB\n",
+      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36mScrapeMenu\u001b[1;34m(link, day)\u001b[0m\n\u001b[0;32m     38\u001b[0m         \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[0;32m     40\u001b[0m     d \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m---> 41\u001b[0m     scraped_day \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(\u001b[43mdate_elements\u001b[49m\u001b[43m[\u001b[49m\u001b[43md\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mtext\u001b[38;5;241m.\u001b[39msplit()[\u001b[38;5;241m2\u001b[39m:\u001b[38;5;241m5\u001b[39m])\n\u001b[0;32m     43\u001b[0m \u001b[38;5;66;03m# Scrape meal\u001b[39;00m\n\u001b[0;32m     44\u001b[0m meal_div \u001b[38;5;241m=\u001b[39m driver\u001b[38;5;241m.\u001b[39mfind_elements(By\u001b[38;5;241m.\u001b[39mCSS_SELECTOR, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdiv.meal\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
     }
    ],
    "source": [
     "link = \"https://www.crous-strasbourg.fr/restaurant/cafeteria-le-pege-2/\"\n",
     "#day = get_today_date()\n",
-    "day = 'vendredi 18 October'\n",
+    "day = 'vendredi 18 octobre'\n",
     "\n",
     "menuDB = ScrapeMenu(link, day)\n",
     "menuDB"
@@ -488,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "8a08e723",
    "metadata": {},
    "outputs": [],
@@ -499,24 +276,167 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b6711603",
+   "metadata": {},
+   "source": [
+    "**AAAAAAAAAAAAAAAAHHHHHHHHHHHHHH**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "049aa9d8",
+   "execution_count": 2,
+   "id": "71d38400",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "link = \"https://www.crous-strasbourg.fr/restaurant/resto-u-gallia-2/\"\n",
+    "#day = get_today_date()\n",
+    "day = 'vendredi 18 octobre'\n",
+    "\n",
+    "menuInfo = {\"day\": [], \"lunch\": [], \"dinner\": []}\n",
+    "\n",
+    "driver = webdriver.Firefox()\n",
+    "driver.get(link)\n",
+    "\n",
+    "# Cookies button\n",
+    "try:\n",
+    "    reject_all = driver.find_element(By.XPATH, \"/html/body/div[6]/div/div[2]/div/div[2]/button[1]\")\n",
+    "    reject_all.click()\n",
+    "except Exception:\n",
+    "    try:\n",
+    "        reject_all = driver.find_element(By.ID, \"tru_deselect_btn\")\n",
+    "        reject_all.click()\n",
+    "    except Exception:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "63d746cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find the right day\n",
+    "d = 0\n",
+    "date_elements = driver.find_elements(By.CSS_SELECTOR, 'time.menu_date_title')\n",
+    "scraped_day = ' '.join(date_elements[d].text.split()[2:5])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0eb2ce0b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Déjeuner Petit-déjeuner Café & Viennoiseries 7h30 -10h30 Plat du jour Rougail saucisse Riz aux épices Végétarien Rougail végétarien Riz aux épices Origine de nos viandes du jour FRANCE'"
+       "'jeudi 17 octobre'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "menuDB['lunch'][0]"
+    "' '.join(date_elements[0].text.split()[2:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5a50b10b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scraped_day != day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "fd0442d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jeudi 17 octobre vendredi 18 octobre\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(scraped_day, day)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3c169edb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    next_button = driver.find_element(By.XPATH, f\"/html/body/article/div/section[1]/div/div/div[{d+1}]/div[1]/div[2]\")\n",
+    "    next_button.click()\n",
+    "except Exception as e:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "89dc7acc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vendredi 18 octobre vendredi 18 octobre\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = 1\n",
+    "scraped_day = ' '.join(date_elements[d].text.split()[2:5])\n",
+    "print(scraped_day, day)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e891f2db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scraped_day != day"
    ]
   }
  ],
