--- a/dirty_file/test_hf.ipynb
+++ b/dirty_file/test_hf.ipynb
@@ -18,8 +18,10 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "from dotenv import load_dotenv\n",
     "\n",
-    "hf_token = \"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\"\n",
+    "load_dotenv(\"C:/Users/busch/OneDrive/Documents/Fac/M2/UE1 - Advanced programming and data visualization/Advanced programming/projet/environment/.env\")\n",
+    "hf_token = os.getenv(\"HUGGING_FACE_KEY\")\n",
     "custom_cache_dir = \"/home/peltouz/Documents/pretrain\"\n",
     "\n",
     "os.environ['HF_HOME'] = custom_cache_dir  # Hugging Face home directory for all HF operations\n",
@@ -597,86 +599,6 @@
     "ent = HF_model(\"loc\", \"I want to eat at Esplanade for the lunch\")\n",
     "ent"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6d80c8d7-7c04-4548-9841-f66067b44c33",
-   "metadata": {},
-   "source": [
-    "## 4) Summarization"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "bf685b3e-0011-482d-a2d7-39f6ab17781c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\busch\\anaconda3\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.26.4\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "from transformers import pipeline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "8024c7e1-f904-4e09-9672-42af729ff50a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "menu = \"Déjeuner Petit-déjeuner Café & Viennoiseries 7h30 -10h30 Plat du jour Omelette au fromage Ratatouille Gratin de pommes de terre ou Frites Végétarien Cappelletis 5 fromages, sauce crème Roquette & parmesan Origine de nos viandes du jour FRANCE\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "45c92b09-bf87-4176-8de2-7823acf80247",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b678e06d75b43f9badd37ff40d20886",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "generation_config.json:   0%|          | 0.00/363 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "summarizer = pipeline(\"summarization\", model=\"facebook/bart-large-cnn\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "30e64320-c9f2-43c6-9dbe-4116ec94407a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'summary_text': 'Petit-déjeuner Café & Viennoiseries 7h30 -10h30 Plat du jour Omelette au fromage Ratatouille Gratin de pommes de terre ou Frites Végétarien Cappelletis.'}]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(summarizer(menu, max_length=80, min_length=30, do_sample=False))"
-   ]
   }
  ],
  "metadata": {
@@ -695,7 +617,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
