--- a/dirty_file/hugging_face.ipynb
+++ b/dirty_file/hugging_face.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "59dbc1c2-f481-47d6-a817-94c0c86c7f3a",
    "metadata": {},
    "outputs": [],
@@ -33,12 +33,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "783123e7-e7b3-4fb4-8488-3b1522293dbf",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\busch\\anaconda3\\Lib\\site-packages\\transformers\\utils\\hub.py:128: FutureWarning: Using `TRANSFORMERS_CACHE` is deprecated and will be removed in v5 of Transformers. Use `HF_HOME` instead.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import logging\n",
     "import torch\n",
@@ -47,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "9bc8c13b-7e02-4c84-b915-e70b65580999",
    "metadata": {},
    "outputs": [],
@@ -70,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "85dec56e-6a9e-4109-8e05-942badaf4c31",
    "metadata": {},
    "outputs": [
@@ -84,7 +93,7 @@
        "  'end': 33}]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "09b880f6-86a6-4d9c-be60-02ed844aafc5",
    "metadata": {},
    "outputs": [
@@ -109,7 +118,7 @@
        "  'end': 19}]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,21 +129,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "e7841234-1fec-4ccc-896b-4c05675652b0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'entity_group': 'ORG',\n",
-       "  'score': 0.67323554,\n",
+       "[{'entity_group': 'LOC',\n",
+       "  'score': 0.99668074,\n",
        "  'word': 'Esplanade',\n",
        "  'start': 17,\n",
        "  'end': 26}]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "55aa53df-9341-4e7f-beee-d96321769ea8",
    "metadata": {},
    "outputs": [],
@@ -157,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "57d63894-b24f-46d9-8ff0-c1d14a2de1d2",
    "metadata": {},
    "outputs": [
@@ -167,7 +176,7 @@
        "'Esplanade'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "4fcca0fb-ceee-4f02-b289-8ce64b0b1f2f",
    "metadata": {
     "tags": []
@@ -201,190 +210,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "id": "813aaf89-3078-4fad-ae30-7ec9268b8a19",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed6fce72c4624befb6e2e7fc21b62999",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "modules.json:   0%|          | 0.00/349 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\busch\\anaconda3\\Lib\\site-packages\\huggingface_hub\\file_download.py:139: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\home\\peltouz\\Documents\\pretrain\\hub\\models--sentence-transformers--all-MiniLM-L6-v2. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
-      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
-      "  warnings.warn(message)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba75952087db4b878b3e5fe3608a8f13",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config_sentence_transformers.json:   0%|          | 0.00/116 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0bf45c6d21c946d3866fafdfe8de5f86",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "README.md:   0%|          | 0.00/10.7k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "baf3fbf24dd446b9b27b3ff070787871",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "sentence_bert_config.json:   0%|          | 0.00/53.0 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28f8c4fbecaf47c39f9618a3c23fa996",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/612 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\busch\\anaconda3\\Lib\\site-packages\\huggingface_hub\\file_download.py:139: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\home\\peltouz\\Documents\\pretrain\\models--sentence-transformers--all-MiniLM-L6-v2. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
-      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
-      "  warnings.warn(message)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb68046a654e40dd817990048c206d87",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors:   0%|          | 0.00/90.9M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f16acd3f9b8c4bf2855ab21ef04548f0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/350 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ea913e7fd9e45118eda7ee07bbc8d27",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "vocab.txt:   0%|          | 0.00/232k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "172de0cfbcc54d7b9b53cf74580c80dc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json:   0%|          | 0.00/466k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60ec28ba99da4eb5ab0e96e5a8561f1e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "special_tokens_map.json:   0%|          | 0.00/112 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aca8bc49014d4030a322f60d16da2daf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "1_Pooling/config.json:   0%|          | 0.00/190 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = SentenceTransformer('sentence-transformers/all-MiniLM-L6-v2')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "id": "c2fcedba-7ba8-4f8b-b9d6-24b567501138",
    "metadata": {},
    "outputs": [],
@@ -396,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "id": "992531d4-6518-4cf4-a047-883f5064ce9a",
    "metadata": {},
    "outputs": [],
@@ -409,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "id": "9180fed7-f411-4e60-87cf-475a473be5a0",
    "metadata": {},
    "outputs": [
@@ -428,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "id": "f40d0fd3-1351-456f-a2ca-beb4703c1ace",
    "metadata": {},
    "outputs": [],
@@ -448,27 +284,6 @@
     "        link.append(\"https://www.crous-strasbourg.fr/restaurant/\" + vec_resto[k].replace(\" \", \"-\") + \"-2/\")\n",
     "    \n",
     "    return link"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "26e18066-fe5c-45be-9d09-d315e85a6d33",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://www.crous-strasbourg.fr/restaurant/le-32-2/'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "resto_similarity(\"le 32\")"
    ]
   },
   {
@@ -522,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "id": "e9756352-d7b6-4046-a209-1176bb5ee99f",
    "metadata": {},
    "outputs": [],
@@ -540,64 +355,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "id": "9378ecb7-5a52-48cc-a6b3-cee4cc9317fa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['https://www.crous-strasbourg.fr/restaurant/resto-u-esplanade-2/']"
+       "['https://www.crous-strasbourg.fr/restaurant/resto-u-gallia-2/']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_link(\"I want to eat at Esplanade\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "dda03532-d495-4db9-98f1-987baa0c4da5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'entity_group': 'LOC',\n",
-       "  'score': 0.9883797,\n",
-       "  'word': 'E',\n",
-       "  'start': 17,\n",
-       "  'end': 18},\n",
-       " {'entity_group': 'LOC',\n",
-       "  'score': 0.97979534,\n",
-       "  'word': '##sp',\n",
-       "  'start': 18,\n",
-       "  'end': 20},\n",
-       " {'entity_group': 'LOC',\n",
-       "  'score': 0.98881453,\n",
-       "  'word': '##lana',\n",
-       "  'start': 20,\n",
-       "  'end': 24},\n",
-       " {'entity_group': 'LOC',\n",
-       "  'score': 0.9908289,\n",
-       "  'word': '##de',\n",
-       "  'start': 24,\n",
-       "  'end': 26}]"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ent = HF_model(\"loc\", \"I want to eat at Esplanade for the lunch\")\n",
-    "ent"
+    "get_link(\"I want to eat at Gallia\")"
    ]
   }
  ],
