--- a/dirty_file/hugging_face.ipynb
+++ b/dirty_file/hugging_face.ipynb
@@ -33,21 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "783123e7-e7b3-4fb4-8488-3b1522293dbf",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\busch\\anaconda3\\Lib\\site-packages\\transformers\\utils\\hub.py:128: FutureWarning: Using `TRANSFORMERS_CACHE` is deprecated and will be removed in v5 of Transformers. Use `HF_HOME` instead.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import logging\n",
     "import torch\n",
@@ -291,87 +282,172 @@
    "id": "9f754d15-fbb7-4246-8568-c5b6f187788b",
    "metadata": {},
    "source": [
-    "## 3) Get link"
+    "## 3) Translator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "id": "29b7e5f2-4af4-42b1-8b7e-550070372559",
+   "execution_count": 3,
+   "id": "d5bf876d-d854-40e9-8c15-4dfea57d5a2c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "message = \"I want to eat at esplanade for the lunch, what is the menu ?\""
+    "def translator(language_from, language_to, text):\n",
+    "    if language_from == \"fr\" and language_to == \"en\":\n",
+    "        api_translator = pipeline(\"translation\", model=\"Helsinki-NLP/opus-mt-fr-en\")\n",
+    "        translation = api_translator(text)[0]['translation_text']\n",
+    "    return translation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "id": "f38ac8db-4d6a-4fee-9856-25c1fdd6fb49",
+   "execution_count": 1,
+   "id": "5e607e47-f0e3-4341-b276-f6e34ea94ec1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from menu_functions import get_menu\n",
+    "menu = get_menu(\"Esplanade\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "24e94380-da0b-4b66-8bed-e0f21766b3e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Student menus 2nd floor\n",
+      "\n",
+      "Chicken hash with homemade cream\n",
+      "Flat beans\n",
+      "Torsades\n",
+      "\n",
+      "Chile with homemade vegetables\n",
+      "Vegetable soup of the day:\n",
+      "Beans, cauliflower and carrots\n",
+      "\n",
+      "- Desserts 2nd floor\n",
+      "\n",
+      "Paris-Brest\n",
+      "Chocolate tart\n",
+      "Coconut tart\n",
+      "Fruit salad\n",
+      "\n",
+      "- Crystal Shop (DRC) Cafeteria\n",
+      "\n",
+      "menu not communicated\n",
+      "\n",
+      "- Origins of our meats of the day\n",
+      "\n",
+      "Poultry origin France\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(menu)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d100f44c-272b-4417-9010-6c4556493424",
+   "metadata": {},
+   "source": [
+    "## 4) Text analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "791003c5-25a5-41aa-8484-5dbfedade00d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'entity_group': 'LOC',\n",
-       "  'score': 0.9135212,\n",
-       "  'word': 'es',\n",
-       "  'start': 17,\n",
-       "  'end': 19},\n",
-       " {'entity_group': 'LOC',\n",
-       "  'score': 0.44644058,\n",
-       "  'word': '##planade',\n",
-       "  'start': 19,\n",
-       "  'end': 26}]"
+       "'- Student menus 2nd floor\\n\\nChicken hash with homemade cream\\nFlat beans\\nTorsades\\n\\nChile with homemade vegetables\\nVegetable soup of the day:\\nBeans, cauliflower and carrots\\n\\n- Desserts 2nd floor\\n\\nParis-Brest\\nChocolate tart\\nCoconut tart\\nFruit salad\\n\\n- Crystal Shop (DRC) Cafeteria\\n\\nmenu not communicated\\n\\n- Origins of our meats of the day\\n\\nPoultry origin France\\n\\n'"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ent = HF_model(\"loc\", message)\n",
-    "ent"
+    "menu"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "e9756352-d7b6-4046-a209-1176bb5ee99f",
+   "execution_count": 18,
+   "id": "ba1cacb5-aa35-4064-8fab-32a64f40e566",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No model was supplied, defaulted to distilbert/distilbert-base-cased-distilled-squad and revision 564e9b5 (https://huggingface.co/distilbert/distilbert-base-cased-distilled-squad).\n",
+      "Using a pipeline without specifying a model name and revision in production is not recommended.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'score': 0.5917239785194397, 'start': 14, 'end': 23, 'answer': '2nd floor'}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "question_answerer = pipeline(\"question-answering\")\n",
+    "question_answerer(\n",
+    "    question=\"Where can i eat Chile ?\",\n",
+    "    context=menu_str,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf06c3e0-3b10-497b-9f98-bed6072b2a2d",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def get_link(message):\n",
-    "    resto = []\n",
-    "    ent = HF_model(\"loc\", message)\n",
-    "    for i in range(len(ent)):\n",
-    "        entity_group = ent[i]['entity_group']\n",
-    "        if entity_group == \"ORG\" or entity_group == \"LOC\":\n",
-    "            resto.append(ent[i]['word'])\n",
-    "    link = resto_link(resto)\n",
-    "    return link"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "9378ecb7-5a52-48cc-a6b3-cee4cc9317fa",
+   "execution_count": 10,
+   "id": "bbfa1963-2c9d-44bf-8953-2626524d768e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['https://www.crous-strasbourg.fr/restaurant/resto-u-gallia-2/']"
+       "{'score': 0.15749846398830414,\n",
+       " 'start': 37,\n",
+       " 'end': 49,\n",
+       " 'answer': '3rd december'}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_link(\"I want to eat at Gallia\")"
+    "question_answerer(\n",
+    "    question=\"What is my birthday ?\",\n",
+    "    context=\"My name is Adrien and I was born the 3rd december\",\n",
+    ")"
    ]
   }
  ],
